fix: styles for overflow

--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -34,6 +34,7 @@
     height: auto;
     width: 100%;
     margin-top: 20vh;
+    padding-bottom: 2rem;
 }
 
 .nav{
